Fix smaller layout problems. (In style.css and index.html)

--- a/Poster-Dateien/style.css
+++ b/Poster-Dateien/style.css
@@ -23,6 +23,7 @@ body {
   grid-template-areas:
     "ueberwachung   title     studium"
     ".              leitlinie   ."
+    "vorschlag      leitlinie    ."
     "vorschlag      leitlinie    comment";
   justify-content: space-between;
 }
@@ -33,7 +34,7 @@ body {
 .ueberwachung,
 .vorschlag,
 .comment {
-  /* text-align: center; */
+  text-align: center;
 }
 
 .illustration {
